# Aegis-Isle

./: .env.example  .gitignore  AL.txt  AL_LICENSE  AL_README.en.md  AL_README.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  ENGINEERING_UPGRADE_SUMMARY.md  LANGGRAPH_MIGRATION.md  README.md  auth_server.py  auth_server_simple.py  demo.py  demo_auth_system.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_dev.py  setup_dev_env.bat  setup_dev_env.sh  test_tool_system.py
.claude/: settings.local.json
scripts/: deploy.sh  setup.sh
src/aegis_isle/: __init__.py
src/aegis_isle/agents/: __init__.py  base.py  memory.py  orchestrator.py  router.py
src/aegis_isle/agents/implementations/: __init__.py  chart_agent.py  researcher_agent.py
src/aegis_isle/api/: __init__.py  dependencies.py  main.py  middleware.py
src/aegis_isle/api/routers/: __init__.py  admin.py  agents.py  auth.py  documents.py  health.py  query.py
src/aegis_isle/core/: config.py  logging.py
src/aegis_isle/rag/: __init__.py  chunker.py  document_processor.py  embedder.py  generator.py  pipeline.py  retriever.py
src/aegis_isle/tools/: __init__.py  base.py  python_repl.py  search.py
